# causabi-geo

./: LICENSE  README.md  pyproject.toml
geo_optimizer/: __init__.py
geo_optimizer/cli/: main.py  output.py
geo_optimizer/core/: crawler.py  robots.py  scorer.py
geo_optimizer/generators/: faq.py  llms_txt.py  robots.py  schema.py
tests/unit/: test_badge.py  test_generators.py  test_robots.py  test_scorer.py
